# honeyhive-daemon

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  devin-export-sync.yml  release.yml
devin/: devin_to_honeyhive.py
enforcement/: CLAUDE.md.example  settings.json.ci-example
enforcement/hooks/: prefer-dedicated-tools.sh  session-budget.sh
evaluators/: __init__.py  batch_evaluate.py  definitions.py  register.py
honeyhive_daemon/: __init__.py  ci.py  claude_hooks.py  config.py  error_categories.py  evaluators.py  exporter.py  filters.py  git_hooks.py  main.py  mappings.py  state.py  transcript.py
honeyhive_daemon/mappings/: claude_code.yaml
specs/: otel_capture.md  stop_disable_rfc.md
tests/: conftest.py  test_config_resolution.py  test_honeyhive_daemon.py  test_init_command.py
